Image functionality with Jobcard (also bug fixes)